--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+    width: 70%;
+    margin: auto;
+}
+
 h1
 {
   text-align: right;
@@ -24,4 +30,12 @@ p
   text-align: justify;
   padding: 10;
   font-family: cursive;
+}
+.coffeeimage
+{
+  height: 50%;
+}
+.logo
+{
+  height:20%;
 }
